[project]
name = "razgon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "pre-commit>=4.3.0",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
