[project]
name = "razgon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.29.0",
    "fastapi>=0.116.1",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "fastapi-users-db-sqlalchemy>=6.0.0",
    "pyjwt[crypto]>=2.8.0",
    "pre-commit>=4.3.0",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.43",
    "pydantic-settings>=2.6.1",
    "uvicorn[standard]>=0.35.0",
]
